Fix white space on tabs

--- a/app/assets/stylesheets/startui/overwrite.scss
+++ b/app/assets/stylesheets/startui/overwrite.scss
@@ -3,8 +3,9 @@
     list-style: inherit;
     margin-bottom: 1rem;
     padding-left: 2rem;
-    
-    &.side-menu-list {
+
+    &.side-menu-list,
+    &.nav {
       list-style: none;
       margin-bottom: 0;
       padding-left: 0;
